# BeefManager

./: .gitignore  BeefManager.sublime-project  CMakeLists.txt  README.md
cloud/: animal.js  app.js  checkout.js  freezer.js  login.js  main.js  meat.js  order.js  prices.js  roles.js  stripeFunctions.js
cloud/views/: bulkEntry.ejs  buy.ejs  freezers.ejs  index.ejs  inventory.ejs  login.ejs  orders.ejs  prices.ejs  qrcodes.ejs  show_user.ejs  users.ejs
cloud/views/include/: alertify-header.ejs  alertify-scripts.ejs  cienegacss.ejs  idealforms-header.ejs  idealforms-scripts.ejs  jquery-header.ejs  jquery-scripts.ejs  message-modal.ejs  moment-scripts.ejs  parse-header.ejs  parse-scripts.ejs  qrcode-scripts.ejs  semantic-header.ejs  semantic-scripts.ejs
config/: global.json
docs/: .gitignore  Architecture.msc  CMakeLists.txt  Data Schema.txt
public/: cienega.css
public/semantic/: semantic.min.css  semantic.min.js
public/semantic/components/: accordion.min.css  button.min.css  card.min.css  checkbox.min.css  form.min.css  header.min.css  input.min.css  item.min.css  list.min.css  message.min.css  modal.min.css  popup.min.css  search.min.css  site.min.css  statistic.min.css  step.min.css
